added a Task history View in Memberview